--- a/AspNetCoreAndAngular6Demo/AspNetCoreAndAngular6Demo.csproj
+++ b/AspNetCoreAndAngular6Demo/AspNetCoreAndAngular6Demo.csproj
@@ -1,4 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
+  <PropertyGroup>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
+  </PropertyGroup>
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
